attached_assets/Pasted--chris-motu-Projects-stash-infuse-build-docker-0-docker_1764869682108.txt
[chris@motu:~/Projects/stash_infuse/build_docker_0]$ docker logs -f stash-jellyfin-proxy
Starting Stash-Jellyfin Proxy...
  PUID: 1000
  PGID: 1000
  TZ: America/Chicago
  Config: /config/stash_jellyfin_proxy.conf
  File "/app/stash_jellyfin_proxy.py", line 4923
    global TAG_GROUPS, LATEST_GROUPS, SERVER_NAME, STASH_TIMEOUT, STASH_RETRIES
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'TAG_GROUPS' is used prior to global declaration
Starting Stash-Jellyfin Proxy...
  PUID: 1000
  PGID: 1000
  TZ: America/Chicago
  Config: /config/stash_jellyfin_proxy.conf
  File "/app/stash_jellyfin_proxy.py", line 4923
    global TAG_GROUPS, LATEST_GROUPS, SERVER_NAME, STASH_TIMEOUT, STASH_RETRIES
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'TAG_GROUPS' is used prior to global declaration
Starting Stash-Jellyfin Proxy...
  PUID: 1000
  PGID: 1000
  TZ: America/Chicago
  Config: /config/stash_jellyfin_proxy.conf
  File "/app/stash_jellyfin_proxy.py", line 4923
    global TAG_GROUPS, LATEST_GROUPS, SERVER_NAME, STASH_TIMEOUT, STASH_RETRIES
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'TAG_GROUPS' is used prior to global declaration
Starting Stash-Jellyfin Proxy...
  PUID: 1000
  PGID: 1000
  TZ: America/Chicago
  Config: /config/stash_jellyfin_proxy.conf
  File "/app/stash_jellyfin_proxy.py", line 4923
    global TAG_GROUPS, LATEST_GROUPS, SERVER_NAME, STASH_TIMEOUT, STASH_RETRIES
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'TAG_GROUPS' is used prior to global declaration
Starting Stash-Jellyfin Proxy...
  PUID: 1000
  PGID: 1000
  TZ: America/Chicago
  Config: /config/stash_jellyfin_proxy.conf
  File "/app/stash_jellyfin_proxy.py", line 4923
    global TAG_GROUPS, LATEST_GROUPS, SERVER_NAME, STASH_TIMEOUT, STASH_RETRIES
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'TAG_GROUPS' is used prior to global declaration
Starting Stash-Jellyfin Proxy...
  PUID: 1000
  PGID: 1000
  TZ: America/Chicago
  Config: /config/stash_jellyfin_proxy.conf
  File "/app/stash_jellyfin_proxy.py", line 4923
    global TAG_GROUPS, LATEST_GROUPS, SERVER_NAME, STASH_TIMEOUT, STASH_RETRIES
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'TAG_GROUPS' is used prior to global declaration
Starting Stash-Jellyfin Proxy...
  PUID: 1000
  PGID: 1000
  TZ: America/Chicago
  Config: /config/stash_jellyfin_proxy.conf
  File "/app/stash_jellyfin_proxy.py", line 4923
    global TAG_GROUPS, LATEST_GROUPS, SERVER_NAME, STASH_TIMEOUT, STASH_RETRIES
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'TAG_GROUPS' is used prior to global declaration
